[gd_scene load_steps=13 format=1]

[ext_resource path="res://scenes/game/Ball.gd" type="Script" id=1]
[ext_resource path="res://assets/imgs/hd_ball.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/enemy_hit.wav" type="Sample" id=3]
[ext_resource path="res://assets/sound/player_hit.wav" type="Sample" id=4]
[ext_resource path="res://assets/sound/wall_hit.wav" type="Sample" id=5]
[ext_resource path="res://scenes/visuals/FlashSprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/imgs/cutscenes/boom.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 6.0

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.502688, 0.803763, 1 )
colors = ColorArray( 0, 0.257813, 0.0100708, 1, 0.976589, 0.807144, 0.000235771, 1, 1, 0.445313, 0, 1, 1, 0, 0, 0 )

[sub_resource type="SampleLibrary" id=3]

samples/enemy_hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/player_hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/wall_hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 6.78641

[sub_resource type="Animation" id=5]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}

[node name="Ball" type="KinematicBody2D" groups=[
"ball",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
id = 0
initial_speed = 140

[node name="AnimatedSprite" type="Sprite" parent="."]

transform/pos = Vector2( -6.61622, -6.57048 )
transform/scale = Vector2( 0.397787, 0.397787 )
texture = ExtResource( 2 )
centered = false
hframes = 9

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 128
config/lifetime = 2.0
config/time_scale = 2.0
config/emit_timeout = 1.5
config/emitting = false
config/process_mode = 1
params/direction = 0.0
params/spread = 360.0
params/linear_velocity = 50.0
params/spin_velocity = 200.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 15.0
params/tangential_accel = 250.0
params/damping = 0.0
params/initial_angle = 229.09
params/initial_size = 0.5
params/final_size = 10.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="InteractionArea" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="InteractionShape" type="CollisionShape2D" parent="InteractionArea"]

shape = SubResource( 4 )
trigger = true
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BallAnimation = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "BallAnimation"

[node name="ExplosionSprite" parent="." instance=ExtResource( 6 )]

visibility/visible = false
visibility/opacity = 0.0
transform/pos = Vector2( -0.299725, -0.0495815 )
z/z = -1
texture = ExtResource( 7 )
modulate = Color( 0.149586, 0.546875, 0.104675, 1 )
sprite_texture = ExtResource( 7 )
attack_time = 0.01
sustain_time = 0.0
decay_time = 0.75
pause_duration = 0.0
attack_variance = 0.0
sustain_variance = 0.0
decay_variance = 0.0
pause_variance = 0.0
scale_min = Vector2( 0.09, 0.09 )
scale_max = Vector2( 25, 25 )
randomize_scale = false
scale_fade_in_mode = 1
scale_fade_out_mode = 3
replay = false

[node name="PowerHitSprite" parent="." instance=ExtResource( 6 )]

visibility/visible = false
visibility/opacity = 1.0
transform/pos = Vector2( -0.228794, 0.0213509 )
z/z = -1
texture = ExtResource( 7 )
modulate = Color( 0.961546, 0.964844, 0.542725, 1 )
sprite_texture = ExtResource( 7 )
attack_time = 0.01
sustain_time = 0.0
decay_time = 0.5
pause_duration = 0.0
attack_variance = 0.0
sustain_variance = 0.0
decay_variance = 0.0
pause_variance = 0.0
scale_min = Vector2( 0, 0 )
scale_max = Vector2( 0.5, 0.5 )
scale_fade_in_mode = 1
scale_fade_out_mode = 3
replay = false


